--- a/2022/15/package.json
+++ b/2022/15/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "module": "es6",
   "scripts": {
     "debug": "nodemon --inspect index.ts",
     "start": "nodemon index.ts",
@@ -11,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.15",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
