--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "1.1",
+  "name": "dodiz-aoc",
   "version": "1.0.0",
+  "bin": {
+    "dodiz-aoc": "./dist/index.js"
+  },
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "dev": "tsc -w",
     "start": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +16,7 @@
   "devDependencies": {
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "@types/node": "^20.10.3"
   }
 }
