--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,15 @@
   "display": "Node LTS",
   "_version": "18.1.0",
   "compilerOptions": {
-    "lib": ["es2023"],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "es2022",
+    "lib": ["ESNext"],
+    "outDir": "dist",
+    "module": "ESNext",
+    "target": "ES2015",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node"
   },
   "include": ["src"]
 }
