--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "bin": {
     "dodiz-aoc": "./dist/index.js"
   },
-  "description": "",
-  "main": "index.ts",
+  "type": "module",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "tsc -w",
     "start": "",
@@ -14,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.10.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
-    "@types/node": "^20.10.3"
+    "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "commander": "^11.1.0"
   }
 }
