--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "d-aoc",
   "version": "1.0.0",
   "bin": {
-    "d-aoc": "./dist/index.js"
+    "d-aoc": "./dist/index.mjs"
   },
-  "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "dev": "tsc -w",
-    "link": "(pnpm -g unlink | true) && pnpm -g link",
+    "start": "tsc && (pnpm -g unlink | true) && pnpm -g link && d-aoc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +21,7 @@
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "chalk": "^5.3.0",
+    "chokidar": "^3.5.3",
     "commander": "^11.1.0"
   }
 }
