--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "d-aoc",
   "version": "1.0.0",
   "bin": {
-    "d-aoc": "./dist/index.mjs"
+    "d-aoc": "./dist/index.js"
   },
   "main": "src/index.ts",
   "scripts": {
     "dev": "tsc -w",
-    "start": "tsc && (pnpm -g unlink | true) && pnpm -g link && d-aoc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && (pnpm -g unlink | true) && pnpm -g link && d-aoc"
   },
   "author": "",
   "license": "ISC",
