--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^20.10.3",
     "nodemon": "^2.0.22",
+    "prettier": "^3.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
