--- a/package.json
+++ b/package.json
@@ -1,27 +1,13 @@
 {
-  "name": "d-aoc",
-  "version": "1.0.0",
-  "bin": {
-    "d-aoc": "./dist/index.js"
-  },
-  "main": "src/index.ts",
-  "scripts": {
-    "dev": "tsc -w",
-    "start": "tsc && (pnpm -g unlink | true) && pnpm -g link && d-aoc"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^20.10.3",
-    "nodemon": "^2.0.22",
-    "prettier": "^3.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
-  },
-  "dependencies": {
-    "@clack/prompts": "^0.7.0",
-    "chalk": "^5.3.0",
-    "chokidar": "^3.5.3",
-    "commander": "^11.1.0"
-  }
+	"name": "d-aoc",
+	"version": "1.0.0",
+	"private": true,
+	"type": "module",
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"prettier": "^3.1.1",
+		"typescript": "^5.3.2",
+		"@types/bun": "latest"
+	}
 }
